--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,7 +3,7 @@ select,
 textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid #dfbcd7;
   border-radius: 4px;
   box-sizing: border-box;
   margin-top: 6px;
@@ -12,7 +12,7 @@ textarea {
 }
 
 .contact input[type="submit"] {
-  background-color: #04aa6d;
+  background-color: #50125b;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -21,7 +21,7 @@ textarea {
 }
 
 .contact input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #c187c4;
 }
 
 .contact {
